DIAC-298 - fix unit tests